<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="alex.aigrafico.MainActivity"
    tools:showIn="@layout/activity_main">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Layout1">

        <CheckBox
            android:text="f :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignParentStart="true"
            android:width="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/editText"
            android:hint="@string/function1_edit"
            android:layout_toEndOf="@+id/checkBox3"
            android:layout_alignParentTop="true" />

            <android.support.design.widget.FloatingActionButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/floatingActionButtonDelete"
                app:backgroundTint="@android:color/transparent"
                app:elevation="0dp"
                android:visibility="invisible" />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/Layout2">
        <CheckBox
            android:text="g :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            android:layout_below="@+id/checkBox"
            android:layout_alignParentStart="true"
            android:width="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/function2_edit"
            android:layout_alignBaseline="@+id/checkBox2"
            android:layout_alignStart="@+id/editText" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/floatingActionButtonDelete2"
            app:backgroundTint="@android:color/transparent"
            app:elevation="0dp" />

    </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/Layout3">

        <CheckBox
            android:text="h :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3"
            android:layout_below="@+id/checkBox2"
            android:layout_alignParentStart="true"
            android:width="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/function3_edit"
            android:layout_alignBaseline="@+id/checkBox3" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_delete"
                android:id="@+id/floatingActionButtonDelete3"
                app:backgroundTint="@android:color/transparent"
                app:elevation="0dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/Layout4">

        <CheckBox
            android:text="i :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox4"
            android:layout_below="@+id/checkBox3"
            android:layout_alignParentStart="true"
            android:width="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/function4_edit"
            android:layout_alignBaseline="@+id/checkBox4"
            android:layout_alignStart="@+id/editText2" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/floatingActionButtonDelete4"
            app:backgroundTint="@android:color/transparent"
            app:elevation="0dp" />

    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/floatingActionButtonAdd"
                app:backgroundTint="@android:color/transparent"
                app:elevation="0dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_menu_edit"
                android:id="@+id/floatingActionButtonDraw"
                app:backgroundTint="@android:color/holo_green_dark"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/msg_x_start"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/textView2"
                android:layout_marginEnd="20dp"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/msg_x_finish"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:textSize="20dp"
                android:layout_marginLeft="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/startX_edit"
                android:layout_alignParentBottom="true"
                android:layout_alignEnd="@+id/textView"
                android:layout_below="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:text="-5"
                android:textSize="15dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/endX_edit"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/textView"
                android:text="5"
                android:textSize="15dp" />

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

    </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

</ScrollView>